# app_prototype

./: README.md  api.yml  applicants.py  applications.py  apps.db  build_database.py  models.py  people.db  pyproject.toml  server.py
