[tool.poetry]
name = "app_prototype"
version = "0.1.0"
description = ""
authors = ["Scott Neaves <scott.neaves@missionlane.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
connexion = "^2.14.1"
Flask-SQLAlchemy = "^2.5.1"
marshmallow-sqlalchemy = "^0.28.1"
flask-marshmallow = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
